--- a/boot/ramdisk_lte/init.mmi.rc
+++ b/boot/ramdisk_lte/init.mmi.rc
@@ -13,9 +13,6 @@ on early-init
     # Create modem FSG mount point
     mkdir /fsg 755 root root
 
-    # boot with max freq, will be reset in post_boot script
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 1209600
-
 on init
     mount pstore pstore /sys/fs/pstore
     chown system log /sys/fs/pstore/console-ramoops
@@ -52,6 +49,10 @@ on moto-charger
     write /sys/module/lpm_levels/parameters/sleep_disabled 0
 
 on early-boot
+    # boot with max freq, will be reset in post_boot script
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq ${ro.cpu0.cpu_max_freq}
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq ${ro.cpu4.cpu_max_freq}
+
     exec /system/bin/sh /init.mmi.early_boot.sh
 
 on boot
