--- a/arch/arm/configs/msm8916-squid_defconfig
+++ b/arch/arm/configs/msm8916-squid_defconfig
@@ -58,6 +58,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_LIONFISH=y
 CONFIG_CPU_HAS_L2_PMU=y
 CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
 CONFIG_CPU_IDLE=y
