--- a/arch/arm/configs/msm8916-squid_defconfig
+++ b/arch/arm/configs/msm8916-squid_defconfig
@@ -154,6 +154,8 @@ CONFIG_INPUT_UINPUT=y
 CONFIG_INTELLI_PLUG=y
 CONFIG_ION_MSM=y
 CONFIG_ION=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_FIOPS=y
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_IPTABLES=y
 CONFIG_IP6_NF_MANGLE=y
