--- a/arch/arm/configs/msm8916-squid_defconfig
+++ b/arch/arm/configs/msm8916-squid_defconfig
@@ -141,9 +141,8 @@ CONFIG_INET_XFRM_MODE_TRANSPORT=y
 CONFIG_INET_XFRM_MODE_TUNNEL=y
 CONFIG_INET_XFRM_TUNNEL=y
 CONFIG_INET=y
-CONFIG_INPUT_EVBUG=m
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_GPIO=m
+CONFIG_INPUT_GPIO=y
 CONFIG_INPUT_HBTP_INPUT=y
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_INPUT_KEYCHORD=y
@@ -224,7 +223,6 @@ CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_MFD_TI_LMU=y
 CONFIG_MMC_BLOCK_MINORS=32
-CONFIG_MMC_BLOCK_TEST=m
 CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_EMBEDDED_SDIO=y
 CONFIG_MMC_MSM_RAW=y
@@ -233,7 +231,6 @@ CONFIG_MMC_PERF_PROFILING=y
 CONFIG_MMC_SDHCI_MSM=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI=y
-CONFIG_MMC_TEST=m
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC=y
 CONFIG_MMI_DEVICE_DTBS=y
@@ -242,8 +239,6 @@ CONFIG_MMI_RAM_INFO=y
 CONFIG_MMI_SOC_INFO=y
 CONFIG_MMI_UNIT_INFO=y
 CONFIG_MMU500_ACTIVE_PREFETCH_BUG_WITH_SECTION_MAPPING=y
-CONFIG_MOBICORE_API=m
-CONFIG_MOBICORE_SUPPORT=m
 CONFIG_MODULE_EXTRA_COPY=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODULE_SIG_FORCE=y
@@ -259,7 +254,6 @@ CONFIG_MSM_BAM_DMUX=y
 CONFIG_MSMB_CAMERA=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_BOOT_STATS=y
-CONFIG_MSM_BUSPM_DEV=m
 CONFIG_MSM_BUS_SCALING=y
 CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_CCI=y
@@ -397,7 +391,7 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_NO_HZ=y
 CONFIG_NR_CPUS=8
 CONFIG_ONESHOT_SYNC=y
-CONFIG_OPROFILE=m
+CONFIG_OPROFILE=y
 CONFIG_OV5645=y
 CONFIG_PACKET=y
 CONFIG_PANIC_ON_DATA_CORRUPTION=y
@@ -443,7 +437,7 @@ CONFIG_QPNP_REVID=y
 CONFIG_QPNP_VIBRATOR=y
 CONFIG_QPNP_VM_BMS=y
 CONFIG_QSEECOM=y
-CONFIG_RADIO_IRIS_TRANSPORT=m
+CONFIG_RADIO_IRIS_TRANSPORT=y
 CONFIG_RADIO_IRIS=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RD_BZIP2=y
@@ -507,7 +501,6 @@ CONFIG_SOCKEV_NLMCAST=y
 CONFIG_SOFTLOCKUP_WATCHDOG_TEST=y
 CONFIG_SOUND=y
 CONFIG_SPI_QUP=y
-CONFIG_SPI_SPIDEV=m
 CONFIG_SPI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 CONFIG_SPMI=y
@@ -531,7 +524,7 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_MMI=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV=y
 CONFIG_TOUCHSCREEN_TOUCHX_BASE=y
-CONFIG_TOUCHSCREEN_TOUCHX=m
+CONFIG_TOUCHSCREEN_TOUCHX=y
 CONFIG_TUN=y
 CONFIG_UHID=y
 CONFIG_UID_STAT=y
