--- a/arch/arm/configs/msm8916-squid_defconfig
+++ b/arch/arm/configs/msm8916-squid_defconfig
@@ -53,6 +53,7 @@ CONFIG_CMA_SIZE_MBYTES=8
 CONFIG_CMA=y
 CONFIG_CORESIGHT=n
 CONFIG_CP_ACCESS=y
+CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
