--- a/arch/arm/configs/msm8916-squid_defconfig
+++ b/arch/arm/configs/msm8916-squid_defconfig
@@ -202,6 +202,7 @@ CONFIG_ISDBT_NMI=y
 CONFIG_JOYSTICK_XPAD=y
 CONFIG_KALLSYMS_ALL=y
 CONFIG_KERNEL_MODE_NEON=y
+CONFIG_KERNEL_XZ=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_KEYS=y
 CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
