--- a/arch/arm/configs/msm8916-squid_defconfig
+++ b/arch/arm/configs/msm8916-squid_defconfig
@@ -212,6 +212,7 @@ CONFIG_L2TP_ETH=y
 CONFIG_L2TP_IP=y
 CONFIG_L2TP_V3=y
 CONFIG_L2TP=y
+CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_LEDS_ATC=y
 CONFIG_LEDS_BD65B60=y
 CONFIG_LEDS_GPIO=y
