--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -218,6 +218,25 @@ dtb-$(CONFIG_ARCH_MSM8994) += msm8994-v1-sim.dtb \
 dtb-$(CONFIG_ARCH_MSM8992) += msm8992-sim.dtb \
 	msm8992-rumi.dtb
 
+ifeq ($(CONFIG_MMI_LUX_DTB),y)
+# Motorola 8936 Devices
+dtb-$(CONFIG_ARCH_MSM8916) += msm8939-lux-p0.dtb
+dtb-$(CONFIG_ARCH_MSM8916) += msm8939-lux-p1.dtb
+dtb-$(CONFIG_ARCH_MSM8916) += msm8939-lux-p1b.dtb
+dtb-$(CONFIG_ARCH_MSM8916) += msm8939-lux-p1c.dtb
+dtb-$(CONFIG_ARCH_MSM8916) += msm8939-lux-p2a.dtb
+else ifeq ($(CONFIG_MMI_OSPREY_DTB),y)
+# Osprey
+dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p0.dtb
+dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p1a.dtb
+dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p1ad.dtb
+dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p1b.dtb
+dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p1bd.dtb
+dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p2a.dtb
+dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p2ad.dtb
+dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p2b.dtb
+dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p2bd.dtb
+else
 # Motorola 8916 Devices
 dtb-$(CONFIG_ARCH_MSM8916) += msm8916-styx-p0.dtb
 dtb-$(CONFIG_ARCH_MSM8916) += msm8916-styx-p1.dtb
@@ -231,24 +250,7 @@ dtb-$(CONFIG_ARCH_MSM8916) += msm8916-surnia-p2b.dtb
 dtb-$(CONFIG_ARCH_MSM8916) += msm8916-surnia-p2bd.dtb
 dtb-$(CONFIG_ARCH_MSM8916) += msm8916-surnia-p3.dtb
 dtb-$(CONFIG_ARCH_MSM8916) += msm8916-surnia-p3d.dtb
-
-# Osprey
-dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p0.dtb
-dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p1a.dtb
-dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p1ad.dtb
-dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p1b.dtb
-dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p1bd.dtb
-dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p2a.dtb
-dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p2ad.dtb
-dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p2b.dtb
-dtb-$(CONFIG_ARCH_MSM8916) += msm8916-osprey-p2bd.dtb
-
-# Motorola 8936 Devices
-dtb-$(CONFIG_ARCH_MSM8916) += msm8939-lux-p0.dtb
-dtb-$(CONFIG_ARCH_MSM8916) += msm8939-lux-p1.dtb
-dtb-$(CONFIG_ARCH_MSM8916) += msm8939-lux-p1b.dtb
-dtb-$(CONFIG_ARCH_MSM8916) += msm8939-lux-p1c.dtb
-dtb-$(CONFIG_ARCH_MSM8916) += msm8939-lux-p2a.dtb
+endif
 
 ifeq ($(CONFIG_MMI_DEVICE_DTBS),y)
 # Add 1k of padding to the DTBs to allow for environment variables
